# RSDKv5-Decompilation

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
RSDKv5/: main.cpp
RSDKv5/RSDK/Core/: Link.hpp  Math.hpp  Reader.cpp  RetroEngine.hpp
RSDKv5/RSDK/Dev/: Debug.cpp
RSDKv5/RSDK/Graphics/: Drawing.hpp  Scene3D.cpp  Scene3D.hpp
RSDKv5/RSDK/Graphics/SDL2/: SDL2RenderDevice.cpp
RSDKv5/RSDK/Input/SDL2/: SDL2InputDevice.cpp
RSDKv5/RSDK/Scene/: Object.cpp
RSDKv5/RSDK/User/Core/: UserCore.cpp  UserStorage.cpp
RSDKv5/RSDK/User/Dummy/: DummyCore.cpp
dependencies/all/thread-pool/: BS_thread_pool.hpp
dependencies/vita/: README.md
mania_livearea/livearea/contents/: template.xml
